Raise Version update connection handling.